test/parse_error/empty_template_expression.pi
component Component {
  // Test!
  <div class="Section">
    {}
  </div>
}
